--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -5,14 +5,14 @@ name: renovate
 
 on:  # yamllint disable-line rule:truthy
   schedule:
-    - cron: 0 */6 * * 1-5
+    - cron: 0 0 * * 1-5
   push:
     branches:
       - main
 
 jobs:
   renovate:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
