--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
+		"lint": "prettier --check . && eslint .",
+		"test:e2e": "playwright test",
+		"test": "npm run test:e2e"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.8"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.49.1",
 		"@eslint/compat": "1.2.8",
 		"@eslint/js": "9.25.1",
 		"@sveltejs/adapter-auto": "6.0.0",
