--- a/.github/workflows/frontend_tests.yaml
+++ b/.github/workflows/frontend_tests.yaml
@@ -25,5 +25,5 @@ jobs:
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4
         if: ${{ !cancelled() }}
         with:
-          name: test_assets
-          path: test_assets/
+          name: frontend/test_assets
+          path: frontend/test_assets/
